<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EnUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:hint="@string/enterUsername"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:layout_margin="10dp"
        android:padding="10dp"
        android:id="@+id/EnPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#651fff"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/acc"
        android:textSize="20sp" />

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#651fff"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>