<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enterUsername"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/signinn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#651FFF"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haveAcc"
        android:textSize="30sp" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/signupp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#651fff"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textStyle="bold" />

</LinearLayout>